# personal-website

./: .gitignore  .gitmodules  AGENTS.md  CNAME  README.md  config.toml  deploy.sh  index.html  preview.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: append_agentsmd_context.sh
.codex/: config.toml
.codex/hooks/: append_agentsmd_context.sh
.github/workflows/: hugo.yml
archetypes/: blog.md
assets/sass/: researcher.scss  variables.scss
content/: _index.md  about.md  facts.md  lineage.md  misc.md  publications.bib  publications.md  research.md  useless.md
content/blog/: _index.md  example.md.bak  first-post.md  first.md  layout.md
content/career-timeline/: _index.md
content/publications/: _index.md
layouts/partials/: footer.html  head.html  header.html
res/: favico.sketch
resources/_gen/assets/scss/sass/: researcher.scss_b95b077eb505d5c0aff8055eaced30ad.content
src/personal_website/: __init__.py  authors.py  bibtex.py  cli.py  publications.py  venues.py
static/: icons.sketch  logo.sketch
static/2nd-gen-favicon/composed/: manifest.json
static/2nd-gen-favicon/composed/light/: index.html
static/bib/: cds-bcb-14.bib  cds-ecir-15.bib  cds-trec-2014.bib
static/css/: index.css
static/img/: me@3x.jpg.bak
static/js/: conic-gradient-minified.js  decode.js  imessage.js  triple.js
static/txt/: pgp.txt
themes/researcher/: theme.toml
themes/researcher/layouts/: 404.html  index.html
themes/researcher/layouts/_default/: baseof.html  list.html  single.html  taxonomy.html  terms.html
themes/researcher/layouts/partials/: footer.html  head.html  header.html
themes/soldaini/: theme.toml
themes/soldaini/assets/sass/: theme.scss  variables.scss
themes/soldaini/data/: publication_topics.json
themes/soldaini/layouts/: 404.html
themes/soldaini/layouts/_default/: baseof.html  list.html
themes/soldaini/layouts/blog/: list.html  single.html
themes/soldaini/layouts/partials/: footer.html  head.html  header.html  math.html
themes/soldaini/layouts/publications/: list.html
themes/soldaini/layouts/shortcodes/: avatar.html  career-timeline.html  company.html  contacts.html  image-grid.html  visitor-greeting.html
