[project]
name = "personal-website"
version = "0.1.0"
description = "Luca Soldaini's personal website"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Luca Soldaini", email = "luca@soldaini.net" }
]
dependencies = [
    "hugo==0.153.0",
    "playwright==1.55.0",
]


[project.scripts]
hugo-cli = "personal_website.__init__:hugo_cli_entrypoint"
hugo-preview = "personal_website.__init__:preview"
preview-png = "personal_website.__init__:preview_png"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_website"]

[tool.ruff]
line-length = 115

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
